tests/ui-fail/dto_derive_wo_req_res_attr.rs
extern crate dto_derive;
use dto_derive::Dto;

#[derive(Debug, PartialEq, Dto)] //~ ERROR could not determine request/response
#[dto(entity = "Entity")]
struct Dto { }

fn main() { }
